--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: ruby
+install: bundle install
+
+install: bundle install
+script: bundle exec rake
+
+before_script:
+- bundle exec rake db:create db:migrate RAILS_ENV=test
+
+rvm:
+- 2.1.2
